--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -1,12 +1,5 @@
 @charset "utf-8";
-/*
-Template Name: Yoffa
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
-File: Layout CSS
-*/
+
 
 @import url("font-awesome.min.css");
 @import url("custom.flexslider.css");
@@ -29,6 +22,8 @@ File: Layout CSS
 /* Header
 --------------------------------------------------------------------------------------------------------------- */
 #header{padding:0 15px;}
+.topspacer-bgded-overlay {
+}
 
 #header #logo{margin:28px 0 0 0;}
 #header #logo h1{margin:0; padding:0; font-size:22px; text-transform:uppercase;}
