--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -266,7 +266,7 @@
 	.row2{color:#474747; background-color:#F6F6F6;}
 	.row3{color:#474747; background-color:#FFFFFF;}
 	.row4{color:#CBCBCB; background-color:#272727;}
-	.row5, .row5 a{color:#474747; background-color:#FFFFFF;}
+	.row5, .row5 a{color:#fff; background-color:#000;}
 
 
 	/* Header */
