--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -263,8 +263,8 @@
 
 	/* Rows */
 	.row1{color:#474747;}
-	.row2{color:#474747; background-color:#F6F6F6;}
-	.row3{color:#474747; background-color:#FFFFFF;}
+	.row2{color:#000000; background-color:#911414;}
+	.row3{color:#000000; background-color:#911414;}
 	.row4{color:#CBCBCB; background-color:#272727;}
 	.row5, .row5 a{color:#fff; background-color:#000;}
 
