--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -264,7 +264,7 @@
 	/* Rows */
 	.row1{color:#474747;}
 	.row2{color:#000000; background-color:#911414;}
-	.row3{color:#000000; background-color:#911414;}
+	.row3{color:#fff; background-color:#911414;}
 	.row4{color:#CBCBCB; background-color:#272727;}
 	.row5, .row5 a{color:#fff; background-color:#000;}
 
